# Rubiks-Cube-Solver

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE.txt  README.md  main.cpp
include/: Collisionset.h  edge_orientation.h  edge_permutation.h  group.h  indexing.h
src/: CMakeLists.txt  Collisionset.cpp  Makefile  corner.cpp  corner.h  corner_orientation.cpp  corner_orientation.h  corner_permutation.cpp  corner_permutation.h  draft.txt  edge_orientation.cpp  edge_orientation.h  edge_permutation.cpp  edge_permutation.h  group.cpp  group.h  indexing.cpp  indexing.h  kociemba_solver.cpp  kociemba_solver.h  optimal_solver.cpp  optimal_solver.h  read_store.cpp  read_store.h  test.cpp
src/cube/: CMakeLists.txt  UDSlice_coord.cpp  UDSlice_coord.h  corner_orientation.cpp  corner_orientation.h  corner_permutation.cpp  corner_permutation.h  corners.cpp  corners.h  cube.cpp  cube.h  edge_orientation.cpp  edge_orientation.h  edge_permutation.cpp  edge_permutation.h  edges.cpp  edges.h  group.cpp  group.h  indexing.cpp  indexing.h  pruning_info.h
src/fileio/: CMakeLists.txt  fileio.cpp  fileio.h
src/pruning/: CMakeLists.txt  Phase1Pruning.cpp  Phase1Pruning.h  coPruning.cpp  coPruning.h  cornerPruning.cpp  cornerPruning.h  cpPruning.cpp  cpPruning.h  edgeFirst6Pruning.cpp  edgeFirst6Pruning.h  edgePruning.cpp  edgePruning.h  edgePruning2.cpp  edgePruning2.h  edgeSecond6Pruning.cpp  edgeSecond6Pruning.h  eoPruning.cpp  eoPruning.h  ep1Pruning.cpp  ep1Pruning.h  ep2Pruning.cpp  ep2Pruning.h  epPruning.cpp  epPruning.h  nibble.h  prune.cpp  prune.h
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  basic_check.cpp
tests/cube_tests/: CMakeLists.txt  UDSlice_coord_test.cpp  corner_orientation_test.cpp  cube_tests.cpp
